--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake --version
+  - cmake --version && clang++ --version
   - cmake ..
   - make
   - ctest -V
